--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Regna Bootstrap Template</title>
+  <title>blog por zuleika Flores </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -82,7 +82,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Welcome to Regna</h1>
-      <h2>We are team of talanted designers making websites with Bootstrap</h2>
+      <h2>Hola,mi nombre es Zuleika Flores,Tengo 19 años , me gusta el bastqueball, estudio licenciatura en quimica, amo hacer ejercicio </h2>
       <a href="#about" class="btn-get-started">Get Started</a>
     </div>
   </section><!-- #hero -->
@@ -246,8 +246,8 @@
     <section id="portfolio">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Portfolio</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3 class="section-title">Galeria</h3>
+          <p class="section-description">En esta galeria encontraras todos mis momentos inolvidable e importante para mi vida y parte de lo que vivi este año </p>
         </div>
         <div class="row">
 
@@ -267,7 +267,7 @@
             <a href="">
               <img src="img/portfolio/app1.jpg" alt="">
               <div class="details">
-                <h4>App 1</h4>
+                <h4>snapchat</h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -277,7 +277,7 @@
             <a href="">
               <img src="img/portfolio/web2.jpg" alt="">
               <div class="details">
-                <h4>Web 2</h4>
+                <h4>facebook</h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -287,7 +287,7 @@
             <a href="">
               <img src="img/portfolio/app3.jpg" alt="">
               <div class="details">
-                <h4>App 3</h4>
+                <h4>instagram </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -297,7 +297,7 @@
             <a href="">
               <img src="img/portfolio/card1.jpg" alt="">
               <div class="details">
-                <h4>Card 1</h4>
+                <h4>comica favorita </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -307,7 +307,7 @@
             <a href="">
               <img src="img/portfolio/card2.jpg" alt="">
               <div class="details">
-                <h4>Card 2</h4>
+                <h4>lugar favoritos </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -327,7 +327,7 @@
             <a href="">
               <img src="img/portfolio/card3.jpg" alt="">
               <div class="details">
-                <h4>Card 3</h4>
+                <h4>comida favorita </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -394,7 +394,7 @@
     <section id="team">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Team</h3>
+          <h3 class="section-title">Mis personas Favoritas </h3>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
         <div class="row">
@@ -415,7 +415,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-2.jpg" alt=""></div>
-              <h4>Sarah Jhinson</h4>
+              <h4>Ana salazar, mi madre </h4>
               <span>Product Manager</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -429,7 +429,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-3.jpg" alt=""></div>
-              <h4>William Anderson</h4>
+              <h4>Susan Cedeño, mi mejor amiga </h4>
               <span>CTO</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -443,7 +443,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-4.jpg" alt=""></div>
-              <h4>Amanda Jepson</h4>
+              <h4>Emanuel Vega , mi novio </h4>
               <span>Accountant</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -464,7 +464,7 @@
     <section id="contact">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Contact</h3>
+          <h3 class="section-title">Contacto</h3>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
       </div>
