--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#hero">Home</a></li>
+          <li class="menu-active"><a href="#hero">Mi perfil</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="#services">cualidades </a></li>
+          <li><a href="#portfolio">Galeria</a></li>
+          <li><a href="#team">personas Favoritas </a></li>
           <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -70,7 +70,7 @@
               <li><a href="#">Drop Down 5</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="#contact">Como contactarme </a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -81,7 +81,7 @@
   ============================-->
   <section id="hero">
     <div class="hero-container">
-      <h1>Welcome to Regna</h1>
+      <h1>bienvenidos a mi Web personal </h1>
       <h2>Hola,mi nombre es Zuleika Flores,Tengo 19 años , me gusta el bastqueball, estudio licenciatura en quimica, amo hacer ejercicio </h2>
       <a href="#about" class="btn-get-started">Get Started</a>
     </div>
@@ -97,27 +97,27 @@
         <div class="row about-container">
 
           <div class="col-lg-6 content order-lg-1 order-2">
-            <h2 class="title">Few Words About Us</h2>
+            <h2 class="title">Mis cualidades </h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Aqui encontraran algunas de las cualidades y valores que he practicado para cada dia pueda ser una persona, cualidades que me ayudaron a cambiar ha lograr un cambio para bien y lograr metas que un dia pense que eran dificiles.
             </p>
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">1. El Respeto </a></h4>
+              <p class="description"> Es uno de los valores mas importante en esta vida, por practicarlo he logrado ganarme la confianza y admiracion de muchas personas </p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">perseverancia</a></h4>
+              <p class="description">Hay muchas veces que se nos hace dificil perseverar,hay momentos donde solo sentimos ganas de dejarlo todo y renunciar;pero esta es una de las virtudes que ha echo que muchas personas se sorprendan de mi</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href=""> La Fe </a></h4>
+              <p class="description">Muchas veces nos cuesta tener fe y por lo general somo mas incredulos que creyente,puedo decir que gracias a Dios lo tengo todo y nada me falta</p>
             </div>
 
           </div>
