--- a/index.html
+++ b/index.html
@@ -171,28 +171,21 @@
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title">Services</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h4><ul>
+         <li type="circle"><a class="text-white-50 mb-4" href="https://www.w3schools.com/code/tryit.asp?filename=G7PLT6CW8GUS">Probar HTML<a/><br>
+       <li type="circle"><a class="text-white-50 mb-4" href=" https://susancede.github.io/Susan-_-/  ">Host una Pagina HTML <a/> <br>
+         <li type="circle" ><a class="text-white-50 mb-4" href="https://www.w3schools.com/code/tryit.asp?filename=G8919X12SLXM  "> Enunciados<a/> <br>
+         <li type="circle"><a class="text-white-50 mb-4" href="https://www.w3schools.com/code/tryit.asp?filename=G892L5DDYK3B   "> Enlaces<a/> <br><h4/>
         </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-bar-chart"></i></a></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-paper-plane"></i></a></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+        <div class="col-lg-4 mr-auto">
+         <h4><ul> <li type="circle"><a class="text-white-50 mb-4" href="https://classroom.google.com/c/NDE4MDM2NTc3MTZa/a/NDE4MjcyMTI1NDZa/details?hl=es">Lista<a/> <br>  
+        <li type="circle" ><a class="text-white-50 mb-4" href="https://www.w3schools.com/code/tryit.asp?filename=G8CP8DNP8MTN "> Formularios<a/> <br>
+          <li type="circle"><a class="text-white-50 mb-4" href="https://www.w3schools.com/code/tryit.asp?filename=G8CPE3VHJFSO "> Tablas <a/> <br>  
+         <li type="circle"><a class="text-white-50 mb-4" href="https://susancede.github.io/Susan-_-/ "> Mi primera web <a/>  <br>
+      <li type="circle"><a class="text-white-50 mb-4" href="https://susancede.github.io/Formulario-de-prueba-de-HTML5/ ">Formularios HTML5 <a/> <br>
+     <li type="circle"><a class="text-white-50 mb-4" href=" https://susancede.github.io/SUSAN14/"> Mejore su pagina Personal  <a/> <br>    
+       </h4>  
+             </ul>
             </div>
           </div>
 
