--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Mi perfil</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">cualidades </a></li>
+          <li><a href="#about">cualidades</a></li>
+          <li><a href="#services">proyectos en clase </a></li>
           <li><a href="#portfolio">Galeria</a></li>
           <li><a href="#team">personas Favoritas </a></li>
           <li class="menu-has-children"><a href="">Drop Down</a>
@@ -170,7 +170,7 @@
     <section id="services">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title">Services</h3>
+          <h3 class="section-title">Proyectos en clases</h3>
           <h4><ul>
          <li type="circle"><a class="text-white-50 mb-4" href="https://www.w3schools.com/code/tryit.asp?filename=G7PLT6CW8GUS">Probar HTML<a/><br>
        <li type="circle"><a class="text-white-50 mb-4" href=" https://susancede.github.io/Susan-_-/  ">Host una Pagina HTML <a/> <br>
