--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
       <div class="container wow fadeIn">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title">Call To Action</h3>
-            <p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3 class="cta-title">Un poco mas sobre mi </h3>
+            <p class="cta-text"> Me encanta la lectura, me encata correr,de pequeña sufri de obesidad , soy una chica que pesaba 249 libras y hoy en dia logre romper el paradigma de que no se puede logrr lo que se quiere. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
@@ -366,14 +366,14 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Mis personas Favoritas </h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description">Estas personas que le muestro aqui son las personas que me motivan dia a dia ha ser mejor persona </p>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-1.jpg" alt=""></div>
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
+              <h4>Ana Salazar</h4>
+              <span>Mi madre</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -386,8 +386,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-2.jpg" alt=""></div>
-              <h4>Ana salazar, mi madre </h4>
-              <span>Product Manager</span>
+              <h4>Plinio Santos  </h4>
+              <span>Mi padre </span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -400,8 +400,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-3.jpg" alt=""></div>
-              <h4>Susan Cedeño, mi mejor amiga </h4>
-              <span>CTO</span>
+              <h4>Susan Cedeño </h4>
+              <span>Mi mejor amiga</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -414,8 +414,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-4.jpg" alt=""></div>
-              <h4>Emanuel Vega , mi novio </h4>
-              <span>Accountant</span>
+              <h4>Ofelina Martinez  </h4>
+              <span>Mi abuela </span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -436,7 +436,7 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Contacto</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description">Soy de panama, mi facebook es: Zuleika Flores,Instagram: Zuleika Flores </p>
         </div>
       </div>
 
