--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Un poco mas sobre mi </h3>
-            <p class="cta-text"> Me encanta la lectura, me encata correr,de pequeña sufri de obesidad , soy una chica que pesaba 249 libras y hoy en dia logre romper el paradigma de que no se puede logrr lo que se quiere. </p>
+            <p class="cta-text"> Me encanta la lectura, me encata correr,de pequeña sufri de obesidad , soy una chica que pesaba 249 libras y hoy en dia logre romper el paradigma de que no se puede lograr lo que se quiere. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
