--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
           <div class="col-lg-12">
             <ul id="portfolio-flters">
               <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
+              <li data-filter=".filter-app">Mi familia </li>
+              <li data-filter=".filter-card">Mi Novio</li>
               <li data-filter=".filter-logo">Logo</li>
               <li data-filter=".filter-web">Web</li>
             </ul>
