--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
               <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">All</li>
               <li data-filter=".filter-app">Mi familia </li>
               <li data-filter=".filter-card">Mi Novio</li>
-              <li data-filter=".filter-logo">Logo</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-logo">Mis amigos</li>
+              <li data-filter=".filter-web">Mis compañeros de sexto año y los de universidad</li>
             </ul>
           </div>
         </div>
@@ -238,7 +238,7 @@
             <a href="">
               <img src="img/portfolio/app1.jpg" alt="">
               <div class="details">
-                <h4>snapchat</h4>
+                <h4>Mis padres</h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -248,7 +248,7 @@
             <a href="">
               <img src="img/portfolio/web2.jpg" alt="">
               <div class="details">
-                <h4>facebook</h4>
+                <h4>Mis Hermanos</h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -258,7 +258,7 @@
             <a href="">
               <img src="img/portfolio/app3.jpg" alt="">
               <div class="details">
-                <h4>instagram </h4>
+                <h4>Las que mas amo </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -268,7 +268,7 @@
             <a href="">
               <img src="img/portfolio/card1.jpg" alt="">
               <div class="details">
-                <h4>comica favorita </h4>
+                <h4>Nuestra segunda salida  </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -278,7 +278,7 @@
             <a href="">
               <img src="img/portfolio/card2.jpg" alt="">
               <div class="details">
-                <h4>lugar favoritos </h4>
+                <h4>nuestro primer encuentro </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -288,7 +288,7 @@
             <a href="">
               <img src="img/portfolio/web3.jpg" alt="">
               <div class="details">
-                <h4>Web 3</h4>
+                <h4>Mis amigos de colegio</h4>
                 <span>Alored dono par</span>
               </div>
             </a>
@@ -298,7 +298,7 @@
             <a href="">
               <img src="img/portfolio/card3.jpg" alt="">
               <div class="details">
-                <h4>comida favorita </h4>
+                <h4>nuestra tercera salida </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
