--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <a href="">
               <img src="img/portfolio/logo2.jpg" alt="">
               <div class="details">
-                <h4>Los fofo family</h4>
+                <h4>Mi despedida de segundo semestre </h4>
                 <span>Alored dono par</span>
               </div>
             </a>
