--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <a href="">
               <img src="img/portfolio/web1.jpg" alt="">
               <div class="details">
-                <h4>Los fofo family</h4>
+                <h4>Mis compañeros de segundo semestre</h4>
                 
               </div>
             </a>
@@ -348,8 +348,8 @@
             <a href="">
               <img src="img/portfolio/logo2.jpg" alt="">
               <div class="details">
-                <h4>Mi despedida de segundo semestre </h4>
-                <span>Alored dono par</span>
+                <h4>Mis fofo family </h4>
+                
               </div>
             </a>
           </div>
