--- a/index.html
+++ b/index.html
@@ -134,29 +134,29 @@
     <section id="facts">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title">Facts</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3 class="section-title">Pequeño conteo de </h3>
+          <p class="section-description">En esta parte vera una calculacion de personas que me conocen,cantidad de proyectos,dinero generado por medio de ahorro ,cantidad de planes para el proximo año</p>
         </div>
         <div class="row counters">
 
   				<div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">232</span>
-            <p>Clients</p>
+            <p>personas que conozco</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">521</span>
-            <p>Projects</p>
+            <p>proyectos</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">1,463</span>
-            <p>Hours Of Support</p>
+            <p>dinero generado</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">15</span>
-            <p>Hard Workers</p>
+            <p>estimado de objetivo para el nuevo año</p>
   				</div>
 
   			</div>
